# demo

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  talk.sh
docs/: prerequisites.md
identity/ego/: identity.yaml
identity/journeys/: klar.yaml  sustentacao.yaml  vida-familiar.yaml
identity/personas/: engineer.yaml  mentor.yaml  strategist.yaml  thinker.yaml  writer.yaml
identity/self/: config.yaml
scripts/: install.py  install.sh  seed-attachments.py  seed-memories.py  talk.sh
users/lucas-vidal/: README.md  exploring.md  extensions.yaml  finances-seed.py
users/lucas-vidal/attachments/: decisoes-reversiveis-e-irreversiveis.md  identidade-pos-corporativa-dezessete-meses-depois.md  por-que-parei-de-cobrar-por-hora.md  refatorar-arquitetura-sem-parar-de-entregar.md  tech-lead-nao-e-engineering-manager-pequeno.md
users/lucas-vidal/attachments/blog/: monolito-node-para-servicos-tipados.md  por-que-parei-de-fazer-1-1-obrigatorias.md
users/lucas-vidal/conjunto/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
users/lucas-vidal/conjunto/docs/: index.md
users/lucas-vidal/conjunto/scripts/: reset-demo.sh  seed.ts  watch-demo.sh
users/lucas-vidal/conjunto/src/: db.ts  server.ts
users/lucas-vidal/conjunto/tests/: docs.test.ts  last-seen.test.ts
users/lucas-vidal/docs/: biografia.md
users/lucas-vidal/identity/ego/: behavior.yaml  constraints.yaml
users/lucas-vidal/identity/journeys/: blog.yaml  conjunto.yaml  pos-corporativo.yaml
users/lucas-vidal/identity/self/: soul.yaml
users/lucas-vidal/memories/: seed.yaml
(+62 files in other folders)
