[project]
name = "mirror-demo"
version = "0.1.0"
description = "Demo characters for Mirror Mind"
requires-python = ">=3.10"
dependencies = [
    # Mirror Mind framework. After viniciusteles/mirror is transferred to the
    # mirror-mind-ai organization, update this URL to:
    #   "mirror @ git+https://github.com/mirror-mind-ai/mirror.git@main"
    "mirror @ git+https://github.com/viniciusteles/mirror.git@main",
    "pyyaml>=6.0",
]
